force-app/main/default/objects/Expenses__c/fields/All_Invoice_Numbers__c.field-meta.xml
<CustomField>
    <fullName>All_Invoice_Numbers__c</fullName>
    <description>Show a concatenated list of invoice numbers</description>
    <label>All Invoice Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>