force-app/main/default/objects/Expenses__c/fields/Campaign_Link__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Link__c</fullName>
    <label>Campaign Link</label>
    <type>Url</type>
</CustomField>