force-app/main/default/objects/Expenses__c/fields/Contributor_Agreement_Attached__c.field-meta.xml
<CustomField>
    <fullName>Contributor_Agreement_Attached__c</fullName>
    <formula>Vendor_Name__r.Contributor_Agreement_Attached__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is only editable on the vendor account record.</inlineHelpText>
    <label>Contributor Agreement Attached</label>
    <type>Checkbox</type>
</CustomField>