force-app/main/default/objects/Expenses__c/fields/Contributor_Agreement_Attached_DEL__c.field-meta.xml
<CustomField>
    <fullName>Contributor_Agreement_Attached_DEL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contributor Agreement Attached</label>
    <type>Checkbox</type>
</CustomField>