force-app/main/default/objects/Expenses__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GumGum, Inc</fullName>
                <default>true</default>
                <label>GumGum, Inc</label>
            </value>
            <value>
                <fullName>GumGum Australia Pty Ltd</fullName>
            </value>
            <value>
                <fullName>GumGum Japan K.K.</fullName>
            </value>
            <value>
                <fullName>GumGum UK Ltd</fullName>
            </value>
            <value>
                <fullName>Just Premium</fullName>
            </value>
            <value>
                <fullName>PXYZ Australia</fullName>
            </value>
            <value>
                <fullName>PXYZ EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>