force-app/main/default/objects/Expenses__c/fields/Expense_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Expense_Case_Safe_ID__c</fullName>
    <formula>CaseSafeID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Case Safe ID</label>
    <type>Text</type>
</CustomField>