force-app/main/default/objects/Expenses__c/fields/Invoice_Attached__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Attached</label>
    <type>Checkbox</type>
</CustomField>