force-app/main/default/objects/Expenses__c/fields/Invoice_Breakouts_Total__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Breakouts_Total__c</fullName>
    <label>Invoice Breakouts Total</label>
    <summarizedField>Invoice_Breakout__c.Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Breakout__c.Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>