force-app/main/default/objects/Expenses__c/fields/Marketing_Category__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Category__c</fullName>
    <label>Marketing Category (Accounting)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Gifts</fullName>
            </value>
            <value>
                <fullName>Dues &amp; Subscriptions</fullName>
            </value>
            <value>
                <fullName>Graphics/Creative</fullName>
            </value>
            <value>
                <fullName>Hosted software</fullName>
                <label>Hosted Software</label>
            </value>
            <value>
                <fullName>Marketing programs</fullName>
                <label>Marketing Programs</label>
            </value>
            <value>
                <fullName>Marketing research</fullName>
                <label>Marketing Research</label>
            </value>
            <value>
                <fullName>Memberships &amp; licenses</fullName>
                <label>Memberships &amp; Licenses</label>
            </value>
            <value>
                <fullName>National Events</fullName>
            </value>
            <value>
                <fullName>Other Consulting</fullName>
            </value>
            <value>
                <fullName>Other outside services</fullName>
                <label>Other Outside Services</label>
            </value>
            <value>
                <fullName>Paid Media</fullName>
            </value>
            <value>
                <fullName>Postage &amp; Shipping</fullName>
            </value>
            <value>
                <fullName>Public relations</fullName>
                <label>Public Relations</label>
            </value>
            <value>
                <fullName>Regional Marketing Events</fullName>
            </value>
            <value>
                <fullName>Creative services</fullName>
                <isActive>false</isActive>
                <label>Creative services</label>
            </value>
            <value>
                <fullName>Events</fullName>
                <isActive>false</isActive>
                <label>Events</label>
            </value>
            <value>
                <fullName>Marketing T&amp;E</fullName>
                <isActive>false</isActive>
                <label>Marketing T&amp;E</label>
            </value>
            <value>
                <fullName>Marketing partnerships</fullName>
                <isActive>false</isActive>
                <label>Marketing partnerships</label>
            </value>
            <value>
                <fullName>Operations</fullName>
                <isActive>false</isActive>
                <label>Operations</label>
            </value>
            <value>
                <fullName>Printing</fullName>
                <isActive>false</isActive>
                <label>Printing</label>
            </value>
            <value>
                <fullName>Promo Items</fullName>
                <isActive>false</isActive>
                <label>Promo Items</label>
            </value>
            <value>
                <fullName>Sales promotions</fullName>
                <isActive>false</isActive>
                <label>Sales promotions</label>
            </value>
            <value>
                <fullName>Subscriptions</fullName>
                <isActive>false</isActive>
                <label>Subscriptions</label>
            </value>
            <value>
                <fullName>T&amp;E airfare &amp; transportation</fullName>
                <isActive>false</isActive>
                <label>T&amp;E airfare &amp; transportation</label>
            </value>
            <value>
                <fullName>T&amp;E lodging</fullName>
                <isActive>false</isActive>
                <label>T&amp;E lodging</label>
            </value>
            <value>
                <fullName>T&amp;E travel meals</fullName>
                <isActive>false</isActive>
                <label>T&amp;E travel meals</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>