force-app/main/default/objects/Expenses__c/fields/Marketing_Category_new__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Category_new__c</fullName>
    <label>Marketing Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Content/Gifting</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Industry Research</fullName>
            </value>
            <value>
                <fullName>Memberships/Subscriptions</fullName>
            </value>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>Publication Subscriptions</fullName>
            </value>
            <value>
                <fullName>Tentpole Global Events</fullName>
            </value>
            <value>
                <fullName>Brand &amp; Awareness</fullName>
                <isActive>false</isActive>
                <label>Brand &amp; Awareness</label>
            </value>
            <value>
                <fullName>Client Retention</fullName>
                <isActive>false</isActive>
                <label>Client Retention</label>
            </value>
            <value>
                <fullName>Lead Generation &amp; Nurture</fullName>
                <isActive>false</isActive>
                <label>Lead Generation &amp; Nurture</label>
            </value>
            <value>
                <fullName>Non-Revenue Marketing Support</fullName>
                <isActive>false</isActive>
                <label>Non-Revenue Marketing Support</label>
            </value>
            <value>
                <fullName>Other (MarTech, subscriptions, licenses, etc.)</fullName>
                <isActive>false</isActive>
                <label>Other (MarTech, subscriptions, licenses, etc.)</label>
            </value>
            <value>
                <fullName>Product Marketing</fullName>
                <isActive>false</isActive>
                <label>Product Marketing</label>
            </value>
            <value>
                <fullName>Sales Tools &amp; Enablement</fullName>
                <isActive>false</isActive>
                <label>Sales Tools &amp; Enablement</label>
            </value>
            <value>
                <fullName>Tradeshows</fullName>
                <isActive>false</isActive>
                <label>Tradeshows</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>