force-app/main/default/objects/Expenses__c/fields/Marketing_Department__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Department__c</fullName>
    <label>Marketing Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corp Comms</fullName>
            </value>
            <value>
                <fullName>CreativeContent</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>JapanAPAC</fullName>
            </value>
            <value>
                <fullName>Marketing Ops</fullName>
            </value>
            <value>
                <fullName>NA Experiential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>