force-app/main/default/objects/Expenses__c/fields/NDA_Attached_del_del__c.field-meta.xml
<CustomField>
    <fullName>NDA_Attached_del_del__c</fullName>
    <formula>Vendor_Name__r.NDA_Attached__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is only editable on the vendor account record.</inlineHelpText>
    <label>NDA Attached</label>
    <type>Checkbox</type>
</CustomField>