force-app/main/default/objects/Expenses__c/fields/NDA_Contributor_Agreement_DEL__c.field-meta.xml
<CustomField>
    <fullName>NDA_Contributor_Agreement_DEL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDA Attached</label>
    <type>Checkbox</type>
</CustomField>