force-app/main/default/objects/Expenses__c/fields/Occurence_Date__c.field-meta.xml
<CustomField>
    <fullName>Occurence_Date__c</fullName>
    <label>Occurence Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>