force-app/main/default/objects/Expenses__c/fields/One_Time_Expense__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Expense__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When this is checked, an Occurrence Breakout is automatically created with the Expense information.</inlineHelpText>
    <label>One-Time Expense</label>
    <type>Checkbox</type>
</CustomField>