force-app/main/default/objects/Expenses__c/fields/Quick_Note__c.field-meta.xml
<CustomField>
    <fullName>Quick_Note__c</fullName>
    <label>Quick Note</label>
    <type>TextArea</type>
</CustomField>