force-app/main/default/objects/Expenses__c/fields/Vendor_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Account_Owner__c</fullName>
    <formula>Vendor_Name__r.Owner.FirstName &amp; &quot; &quot; &amp; Vendor_Name__r.Owner.LastName</formula>
    <label>Vendor Account Owner</label>
    <type>Text</type>
</CustomField>