force-app/main/default/objects/Expenses__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vendor Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Expenses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>