force-app/main/default/objects/Expenses__c/fields/W_9_Attached__c.field-meta.xml
<CustomField>
    <fullName>W_9_Attached__c</fullName>
    <formula>Vendor_Name__r.W9__c</formula>
    <inlineHelpText>This field is only editable on the vendor account record.</inlineHelpText>
    <label>W-9 Attached</label>
    <type>Checkbox</type>
</CustomField>