force-app/main/default/objects/Expenses__c/validationRules/Check_for_Supplier.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Supplier</fullName>
    <active>true</active>
    <description>Requires_account_to_be_a_Supplier</description>
    <errorConditionFormula>Vendor_Name__r.RecordType.Name &lt;&gt; &quot;Supplier&quot;</errorConditionFormula>
    <errorDisplayField>Vendor_Name__c</errorDisplayField>
    <errorMessage>Please select a &quot;Supplier&quot; account.</errorMessage>
</ValidationRule>