force-app/main/default/objects/Expenses__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Department__c</columns>
    <columns>Marketing_Category__c</columns>
    <columns>Expense_Status__c</columns>
    <columns>Expense_Amount__c</columns>
    <columns>Invoice_Status__c</columns>
    <columns>Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>