force-app/main/default/objects/Expenses__c/listViews/APPROVED_Marketing_Expenses.listView-meta.xml
<ListView>
    <fullName>APPROVED_Marketing_Expenses</fullName>
    <columns>NAME</columns>
    <columns>Expense_Status__c</columns>
    <columns>Expense_Amount__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Invoice_Status__c</columns>
    <columns>Invoice_Attached__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expense_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>APPROVED Marketing Expenses</label>
</ListView>