force-app/main/default/objects/Expenses__c/listViews/Digiday_Events_2017.listView-meta.xml
<ListView>
    <fullName>Digiday_Events_2017</fullName>
    <columns>NAME</columns>
    <columns>Expense_Amount__c</columns>
    <columns>Expense_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vendor_Name__c</field>
        <operation>equals</operation>
        <value>Digiday</value>
    </filters>
    <label>Digiday Events 2017</label>
</ListView>