force-app/main/default/objects/Expenses__c/listViews/EMEA_Expenses.listView-meta.xml
<ListView>
    <fullName>EMEA_Expenses</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Entity__c</columns>
    <columns>Department__c</columns>
    <columns>Marketing_Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Marketing_Department__c</field>
        <operation>equals</operation>
        <value>EMEA</value>
    </filters>
    <filters>
        <field>Department__c</field>
        <operation>includes</operation>
        <value>Europe</value>
    </filters>
    <filters>
        <field>Entity__c</field>
        <operation>contains</operation>
        <value>&quot;GumGum, Inc&quot;,GumGum UK Ltd,GumGum Japan K.K.,GumGum Australia Pty Ltd</value>
    </filters>
    <label>EMEA Expenses</label>
</ListView>