force-app/main/default/objects/Expenses__c/listViews/Events_Exepenses_2017.listView-meta.xml
<ListView>
    <fullName>Events_Exepenses_2017</fullName>
    <columns>NAME</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Department__c</columns>
    <columns>Expense_Amount__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Invoice_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Occurence_Date__c</field>
        <operation>greaterThan</operation>
        <value>12/31/2016</value>
    </filters>
    <filters>
        <field>Marketing_Category__c</field>
        <operation>equals</operation>
        <value>Events</value>
    </filters>
    <label>Events Expenses 2017</label>
</ListView>