force-app/main/default/objects/Expenses__c/listViews/NOT_PAID_Marketing_Expenses.listView-meta.xml
<ListView>
    <fullName>NOT_PAID_Marketing_Expenses</fullName>
    <columns>Invoice_Date__c</columns>
    <columns>NAME</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Department__c</columns>
    <columns>Marketing_Category__c</columns>
    <columns>Expense_Amount__c</columns>
    <columns>Invoice_Status__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Invoice_Attached__c</columns>
    <columns>Payment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoice_Status__c</field>
        <operation>equals</operation>
        <value>Open,Processed</value>
    </filters>
    <label>NOT PAID Marketing Expenses</label>
</ListView>